SFDC Automation/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>FIS__c</fullName>
        <label>FIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_In_Vehicles_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Rental Opportunity. This field used to determine whether to include this Product count on Opportunity or not!</description>
        <label>Include In Vehicles Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAM_Class__c</fullName>
        <label>SAM Class</label>
        <picklist>
            <picklistValues>
                <fullName>10 - Panel Van or Pickup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - Parcel Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - Metro Van/Sprinter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - Truck &gt;=8K &lt;= 16K GVW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - Reefer Truck &lt;=16K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 - Gas Straight Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - Truck &gt;16K &lt;=26K GVW &lt;=20 ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 - Truck (No Body) &gt;16K &lt;=26K GVW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 - Truck &gt;16K &lt;=26K GVW &gt; 20 ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61 - Tank Truck &gt;16K &lt;=26K GVW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70 - Reefer Truck &gt;16K &lt;=26K GVW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 - Truck &gt;26K GVW &lt;= 20 ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81 - Truck (No Body) &gt;26K &lt;=33K GVW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 - Truck &gt; 26K GVW &gt; 20 ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91 - Tank Truck &gt;26K &lt;=33K GVW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - Stake or Flatbed Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110 - Reefer Truck &gt; 26K GVW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 - T/A Big Bore Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121 - S/A Big Bore Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>122 - Tank Truck &gt;33K GVW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130 - S/A Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131 - S/A Yard Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>132 - S/A Pick-up &amp; Delivery Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140 - T/A Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>141 - T/A Yard Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 - S/A Sleeper Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160 - T/A COE Sleeper Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170 - T/A Conv Sleeper Tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180 - Dry Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>181 - Tanker Trailer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VHC_TYPE__c</fullName>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takeover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SAM_Class__c</columns>
        <columns>VHC_TYPE__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Rental_Product</fullName>
        <active>true</active>
        <label>Rental Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>UVS_Record_Type</fullName>
        <active>true</active>
        <label>UVS Record Type</label>
    </recordTypes>
</CustomObject>